some problem solved

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="hello">HELLO,I'M</h1>
             <h1 class="hello orange-highlight">RAJU AHMMAD</h1>
             <p>A full stack allaround designer that placerat in massa consecrer</p>
-            <a class="hire-me" href="">Hire Me</a>
+            <a target="_blank" class="hire-me" href="https://www.instagram.com/rajuahmmad0187/">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/hero2.png" alt="">
@@ -21,17 +21,17 @@
     </section>
     <section class="second">
         <div class="half-width">
-            <img src="images/hero2.png" alt="">
+            <img class="second-img" src="images/hero1" alt="">
         </div>
         <div class="half-width Download-cv">
             <h1>ABOUT</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia suscipit atque repellat, ducimus eum nam non itaque nobis pariatur quis ullam dolor necessitatibus asperiores molestias commodi ea delectus ratione obcaecati!</p>
-            <a class="hire-me" href="">Download CV</a>
+            <p>This is Raju Ahmmad Hridoy.I am a full stack web developer. Now i working in programming hero Ltd.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia suscipit atque repellat, ducimus eum nam non itaque nobis pariatur quis ullam dolor necessitatibus asperiores molestias commodi ea delectus ratione obcaecati!</p>
+            <a target="_blank" class="hire-me" href="https://www.instagram.com/rajuahmmad0187/">Download CV</a>
         </div>
     </section>
     <section class="latest-area">
             <div class="latest-head-text">
-                <h1 class="latest-head">  WORKING PROJECT</h1>
+                <h1 class="latest-head"> <span class="orange-highlight">LASTED</span> WORKING PROJECT</h1>
             </div>
             <div class="row">
                 <div class="width33">
@@ -54,33 +54,45 @@
                         <h3>Lorem ipsum dolor sit amet.</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, tenetur?</p>
                      </div>
-                </div>
+                </div> 
             </div>
        
     </section> 
     <section>
         <div class="happy-clint-text">
-            <h1>Happy Clint</h1>
+            <h1>HAPPY CLINT</h1>
         </div>
         <div class="half-width">
-            <img src="images/hero2.png" alt="">
+            <img class="clint-img" src="images/clint.png" alt="">
         </div>
         <div class="half-width">
-            <img src="images/hero2.png" alt="">
+            <h1>MH Meheraj</h1>
+            <h4>Senior web developer</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dicta eligendi quae consequatur alias voluptate officiis. Earum doloribus eos voluptatem maxime nostrum ducimus laboriosam minima iste, sed illo ea? Facere!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit placeat a doloremque animi? Recusandae at quas magni dignissimos aliquam perspiciatis ipsa, labore quae enim, eum optio omnis in, voluptate nostrum!</p>
         </div>
     </section>
     <footer>
        <div class="width60">
         <div class="inquey-area">
             <div class="half-width">
-                <h2 class="inquery-text">hlsjdfsdljfl;a</h2>
+                <h2 class="inquery-text">WORK INQUIRY</h2>
             </div>
             <div class="half-width">
-                <a class="hire-me lets-chat" href="">lets go</a>
+                <a target="_blank" class="hire-me lets-chat" href="https://www.instagram.com/rajuahmmad0187/">lets go</a>
             </div>
         </div>
        </div>
-       
+       <div class="connected-area">
+            <div class="connected-inner">
+                <h4>STAY CONNECT</h4>
+                <H2>rajuahmmad0187@gmail.com</H2>
+                <div class="social-icon">
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100025919400813"><img src="icons/ball" alt=""></a>
+                    <a target="_blank" href="http://127.0.0.1:5500/index.html"><img src="icons/be" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/rajuahmmad0187/"><img src="icons/ins" alt=""></a>
+                </div>
+            </div>
+       </div>
     </footer>
 </body>
 </html>
