--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <section>
         <div class="half-width">
+           <div class="header-area">
             <h1 class="hello">HELLO,I'M</h1>
             <h1 class="hello orange-highlight">RAJU AHMMAD</h1>
             <p>A full stack allaround designer that placerat in massa consecrer</p>
             <a target="_blank" class="hire-me" href="https://www.instagram.com/rajuahmmad0187/">Hire Me</a>
+           </div>
         </div>
         <div class="half-width">
             <img src="images/hero2.png" alt="">
@@ -24,8 +26,8 @@
             <img class="second-img" src="images/hero1" alt="">
         </div>
         <div class="half-width Download-cv">
-            <h1>ABOUT</h1>
-            <p>This is Raju Ahmmad Hridoy.I am a full stack web developer. Now i working in programming hero Ltd.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia suscipit atque repellat, ducimus eum nam non itaque nobis pariatur quis ullam dolor necessitatibus asperiores molestias commodi ea delectus ratione obcaecati!</p>
+            <h1>ABOUT ME</h1>
+            <p>This is Raju Ahmmad Hridoy.I am a full stack web developer. Now i working in programming hero Ltd.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia suscipit atque repellat, ducimus eum nam non itaque nobis pariatur quis ullam dolor necessitatibus asperiores molestias commodi ea delectus ratione obcaecati!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dicta enim quia illo, dolore incidunt, fugit itaque, ratione necessitatibus magnam atque. Magni nesciunt atque cupiditate autem, et mollitia quaerat voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sapiente ullam ratione sit delectus fuga, doloremque cum labore! Dolore tempora error tempore nisi autem eius magni adipisci nulla vero provident.</p>
             <a target="_blank" class="hire-me" href="https://www.instagram.com/rajuahmmad0187/">Download CV</a>
         </div>
     </section>
@@ -33,7 +35,7 @@
             <div class="latest-head-text">
                 <h1 class="latest-head"> <span class="orange-highlight">LASTED</span> WORKING PROJECT</h1>
             </div>
-            <div class="row">
+            <div>
                 <div class="width33">
                     <img src="images/image 5.png" alt="">
                      <div class="text-area">
@@ -60,15 +62,17 @@
     </section> 
     <section>
         <div class="happy-clint-text">
-            <h1>HAPPY CLINT</h1>
+            <h1> <span class="orange-highlight">HAPPY </span>CLIENT</h1>
         </div>
         <div class="half-width">
             <img class="clint-img" src="images/clint.png" alt="">
         </div>
         <div class="half-width">
-            <h1>MH Meheraj</h1>
+            <div class="client-info">
+                <h1>MH Meheraj</h1>
             <h4>Senior web developer</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dicta eligendi quae consequatur alias voluptate officiis. Earum doloribus eos voluptatem maxime nostrum ducimus laboriosam minima iste, sed illo ea? Facere!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit placeat a doloremque animi? Recusandae at quas magni dignissimos aliquam perspiciatis ipsa, labore quae enim, eum optio omnis in, voluptate nostrum!</p>
+            </div>
         </div>
     </section>
     <footer>
