--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <div class="header-area">
             <h1 class="hello">HELLO,I'M</h1>
             <h1 class="hello orange-highlight">RAJU AHMMAD</h1>
-            <p>A full stack allaround designer that placerat in massa consecrer</p>
+            <p>A full stack allaround designer that placerat in massa consectetur</p>
             <a target="_blank" class="hire-me" href="https://www.instagram.com/rajuahmmad0187/">Hire Me</a>
            </div>
         </div>
